fix small spacing issues

--- a/styles/Changelog.module.css
+++ b/styles/Changelog.module.css
@@ -1,5 +1,4 @@
 .timeline {
-  margin-top: 2%;
   margin-bottom: 2%;
 }
 
